--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+a {
+    color: #22d3ee;
+}
+
+ul {
+    list-style-type: circle;
+}
